@@ -1,2 +1,2 @@
-VERSION=8.00.04
+VERSION=8.00.05
 YEARS=1992-2015
