@@ -1,4 +1,4 @@
-.TH "icmake" "1" "1992\-2015" "icmake\&.8\&.00\&.04\&.tar\&.gz" "A program maintenance utility"
+.TH "icmake" "1" "1992\-2015" "icmake\&.8\&.00\&.05\&.tar\&.gz" "A program maintenance utility"
 
 .PP 
 .SH "NAME"
