@@ -1,4 +1,4 @@
-.TH "icmconf" "7" "1992\-2015" "icmake\&.8\&.00\&.04\&.tar\&.gz" "configuration file for \fBicmbuild\fP(1)"
+.TH "icmconf" "7" "1992\-2015" "icmake\&.8\&.00\&.05\&.tar\&.gz" "configuration file for \fBicmbuild\fP(1)"
 
 .PP 
 .SH "NAME"
@@ -273,7 +273,7 @@ The name of the parser specification file\&. This file is
 expected in the directory specified at \fIPARSER_DIR\fP\&.
 .IP 
 .IP o 
-\fB//#define PRECOMP           \(dq\&\-x c++\-headers\(dq\&\fP
+\fB//#define PRECOMP           \(dq\&\-x c++\-header\(dq\&\fP
 .br 
 When activated internal header files (see \fI#define IH\fP) are
 precompiled when they are more recent than their precompiled
