@@ -1,4 +1,4 @@
-.TH "icmstart" "1" "1992\-2015" "icmake\&.8\&.00\&.04\&.tar\&.gz" "starts icmbuild program maintenance"
+.TH "icmstart" "1" "1992\-2015" "icmake\&.8\&.00\&.05\&.tar\&.gz" "starts icmbuild program maintenance"
 
 .PP 
 .SH "NAME"
