@@ -1,4 +1,4 @@
-.TH "icmstart\&.rc" "7" "1992\-2015" "icmake\&.8\&.00\&.04\&.tar\&.gz" "icmstart resource file"
+.TH "icmstart\&.rc" "7" "1992\-2015" "icmake\&.8\&.00\&.05\&.tar\&.gz" "icmstart resource file"
 
 .PP 
 .SH "NAME"
