@@ -7,9 +7,8 @@ int linear_undef(char const *ident)
     if (item == NULL)
         return 0;
 
-    memcpy((Linear *)item, item + 1, 
-            (l_size - (item + 1 - l_table)) * sizeof(Linear));
+    *item->id = 0;
+    free(item->definition);
 
-    --l_size;
     return 1;
 }
